k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic
  namespace: titanic-api
  labels:
    app: titanic
spec:
  selector:
    app: titanic
  ports:
    - name: titanic-ui
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api
  namespace: titanic-api
  labels:
    app: titanic
spec:
  serviceName: api
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      restartPolicy: Always
      containers:
        - name: api
          image: api_image
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: titanic-http
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "300m"
