k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: titanic-api
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
    - name: titanic-ui
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: titanic-api
  labels:
    app: mysql
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      restartPolicy: Always
      containers:
        - name: mysql
          image: admintuts/mariadb:10.5.8-focal
          imagePullPolicy: Always
          ports:
          - containerPort: 3306
            name: mysql-port
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          volumeMounts:
          - name: db-data
            mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard-rwo
      resources:
        requests:
          storage: 1Gi
